--- a/package.json
+++ b/package.json
@@ -15,8 +15,24 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "gatsby": "^4.1.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "@emotion/css": "^11.5.0",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@gatsbyjs/reach-router": "^1.3.6",
+    "@reach/router": "^1.3.4",
+    "gatsby": "^2.32.13",
+    "gatsby-link": "^4.2.0",
+    "gatsby-plugin-emotion": "^5.4.0",
+    "gatsby-plugin-image": "^0.7.2",
+    "gatsby-plugin-manifest": "^2.12.1",
+    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-sharp": "^2.14.4",
+    "gatsby-react-router-scroll": "^5.2.0",
+    "gatsby-source-filesystem": "^2.11.1",
+    "reach": "^1.0.1",
+    "reach-router": "^0.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0"
   }
 }
