--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "gatsby-image": "^3.11.0",
     "gatsby-link": "^4.2.0",
     "gatsby-plugin-emotion": "^5.4.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^0.7.2",
     "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-mdx": "^3.2.0",
+    "gatsby-plugin-netlify": "^3.14.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-sharp": "^2.14.4",
