--- a/package.json
+++ b/package.json
@@ -18,12 +18,18 @@
     "@emotion/css": "^11.5.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@gatsbyjs/reach-router": "^1.3.6",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@reach/router": "^1.3.4",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.1.3",
+    "font-awesome": "^4.7.0",
     "gatsby": "^4.2.0",
     "gatsby-image": "^3.11.0",
     "gatsby-link": "^4.2.0",
@@ -44,6 +50,7 @@
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.32.5"
   }
 }
