--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
-    "react-intersection-observer": "^8.32.5"
+    "react-intersection-observer": "^8.32.5",
+    "react-modal": "^3.14.4"
   }
 }
