update to animations and cleaned up css modules

--- a/package.json
+++ b/package.json
@@ -47,11 +47,14 @@
     "reach": "^1.0.1",
     "reach-router": "^0.0.0",
     "react": "^17.0.2",
+    "react-awesome-reveal": "^3.8.1",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.32.5",
-    "react-modal": "^3.14.4"
+    "react-modal": "^3.14.4",
+    "react-reveal": "^1.2.2",
+    "react-use": "^17.3.1"
   }
 }
