--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@reach/router": "^1.3.4",
+    "autoprefixer": "^10.4.1",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
@@ -55,6 +56,7 @@
     "react-intersection-observer": "^8.32.5",
     "react-modal": "^3.14.4",
     "react-reveal": "^1.2.2",
-    "react-use": "^17.3.1"
+    "react-use": "^17.3.1",
+    "tailwindcss": "^3.0.9"
   }
 }
