--- a/package.json
+++ b/package.json
@@ -15,9 +15,6 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@emotion/css": "^11.5.0",
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
@@ -28,8 +25,6 @@
     "@mdx-js/react": "^1.6.22",
     "@reach/router": "^1.3.4",
     "autoprefixer": "^10.4.1",
-    "boostrap": "^2.0.0",
-    "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "gatsby": "^4.2.0",
     "gatsby-image": "^3.11.0",
@@ -40,7 +35,6 @@
     "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-mdx": "^3.2.0",
     "gatsby-plugin-netlify": "^3.14.0",
-    "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-sharp": "^2.14.4",
     "gatsby-react-router-scroll": "^5.2.0",
@@ -48,15 +42,10 @@
     "reach": "^1.0.1",
     "reach-router": "^0.0.0",
     "react": "^17.0.2",
-    "react-awesome-reveal": "^3.8.1",
-    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
-    "react-intersection-observer": "^8.32.5",
     "react-modal": "^3.14.4",
-    "react-reveal": "^1.2.2",
-    "react-use": "^17.3.1",
-    "tailwindcss": "^3.0.9"
+    "react-reveal": "^1.2.2"
   }
 }
