--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "Kevin Yu",
-  "author": "keviny203",
+  "author": "permeance",
   "keywords": [
     "gatsby"
   ],
@@ -46,6 +46,11 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
-    "react-reveal": "^1.2.2"
+    "react-reveal": "^1.2.2",
+    "tailwindcss": "^3.0.9"
+  },
+  "devDependencies": {
+    "gatsby-plugin-postcss": "^5.4.0",
+    "postcss": "^8.4.5"
   }
 }
