--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@botpoison/browser": "^0.1.30",
+    "@botpoison/node": "^0.1.10",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
@@ -26,7 +28,7 @@
     "@reach/router": "^1.3.4",
     "autoprefixer": "^10.4.1",
     "font-awesome": "^4.7.0",
-    "gatsby": "^4.2.0",
+    "gatsby": "^4.25.1",
     "gatsby-image": "^3.11.0",
     "gatsby-link": "^4.2.0",
     "gatsby-plugin-emotion": "^5.4.0",
