--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-link": "^4.2.0",
     "gatsby-plugin-emotion": "^5.4.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-gtag": "^5.3.0",
     "gatsby-plugin-image": "^0.7.2",
     "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-mdx": "^3.2.0",
